--- a/css/gobbit.css
+++ b/css/gobbit.css
@@ -26,3 +26,19 @@ li a:hover{
 label{
 	display:block;
 }
+
+
+ul.communities{
+	margin: 0;
+	padding: 0;
+	overflow: hidden;
+	background-color: white;
+}
+
+li.community{
+	float: none;
+}
+
+a.community:hover{
+	color: black;
+}
