--- a/css/gobbit.css
+++ b/css/gobbit.css
@@ -42,3 +42,35 @@ li.community{
 a.community:hover{
 	color: black;
 }
+
+
+.bgimage {
+	background-image: url('something.jpg');
+	background-position: center top;
+	background-repeat: no-repeat;
+	padding: 30px 30px 30px 30px;
+}
+
+.blurcontent {
+	padding: 20px;
+	background: rgb(34,34,34); /* for IE */
+	background: rgba(34,34,34,0.75);
+	color:white;
+	width:72%;
+}
+
+.blurbg {
+	/* Absolutely position it, but stretch it to all four corners, then put it just behind #search's z-index */
+	position: absolute;
+	top: 0px;
+	right: 0px;
+	bottom: 0px;
+	left: 0px;
+	z-index: 99;
+
+	/* Pull the background 70px higher to the same place as #bg's */
+	background-position: center -70px;
+
+	-webkit-filter: blur(10px);
+	filter: blur(10px);
+}
