--- a/css/gobbit.css
+++ b/css/gobbit.css
@@ -127,6 +127,11 @@ a.community:hover{
 	height:80px;
 }
 
+.avatar.small{
+	width:50px;
+	height:50px;
+}
+
 .profile-avatar{
 	width:200px;
 	height:200px;
